[package]
name = "pc_server"
version = "0.1.0"
authors = ["Andrew <klinks22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.16.7"
anyhow = "1"

[build]

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"